--- a/pets.html
+++ b/pets.html
@@ -117,6 +117,14 @@
         </div>
 
     </main>
+    <footer>
+        <p id="year">© </p>
+
+    </footer>
+    <script>
+        const yearSpan = document.getElementById('year');
+        yearSpan.textContent += new Date().getFullYear();
+    </script>
 
 </body>
 
