--- a/recipes.html
+++ b/recipes.html
@@ -369,6 +369,14 @@
         </div>
 
     </main>
+    <footer>
+        <p id="year">© </p>
+
+    </footer>
+    <script>
+        const yearSpan = document.getElementById('year');
+        yearSpan.textContent += new Date().getFullYear();
+    </script>
 </body>
 
 </html>
