--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         </div>
 
     </main>
+    <footer>
+        <p id="year">© </p>
+
+    </footer>
+    <script>
+        const yearSpan = document.getElementById('year');
+        yearSpan.textContent += new Date().getFullYear();
+    </script>
+
+
 
 </body>
 
